--- a/css/styles.css
+++ b/css/styles.css
@@ -474,7 +474,12 @@ color: var(--text-color);
     
 }
 .log {
+    display: flex;
     margin-bottom: 20px;
+}
+.log-item:not(:last-child) {
+    margin-right: 70px;
+
 }
 
 
@@ -523,4 +528,41 @@ color: rgba(255, 255, 255, 0.6);
 .cl2{
     margin-bottom: 9px;
 }
+
+.nomer {
+    font-style: normal;
+}
+.social-network {
+    padding-top: 12px;
+}
+.soc-foot-h3 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.social-list-footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.social-list-item {
+    height: 44px;
+    width: 44px
+}
+.social-link-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.soc-icon-footer {
+    fill: #FFFFFF;
+}
+
 /*---------------------------------/FOOTER--*/
