--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,13 @@ img {
 }
 .contact {
     display: flex;
-    margin-right: 50px;
+    align-items: center;
+    margin-left: auto;
 }
+
+contact-item {
+    margin-right: 50px;}
+
 
 .menu-li {
     display: flex;
@@ -144,7 +149,7 @@ color:var(--mail-color);
     font-size: 14px;
     line-height: 1.14px;
     letter-spacing: 0.02em;
-    color: #0c0e10;
+    color:#757575;
 }
 
 .contact-maill { 
@@ -475,13 +480,22 @@ color: var(--text-color);
 }
 .log {
     display: flex;
-    margin-bottom: 20px;
+    align-items: baseline;
 }
-.log-item:not(:last-child) {
+.log-item {
     margin-right: 70px;
 
 }
-
+.logo-footer {
+    width: auto;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    margin-bottom: 20px;
+    text-decoration: none;
+    display: block;
+    margin-left: 20px;
+}
 
 .logotipe {
     font-family: 'Raleway', sans-serif;
@@ -528,17 +542,31 @@ color: rgba(255, 255, 255, 0.6);
 .cl2{
     margin-bottom: 9px;
 }
+.cl13{
+    margin-top: 20px;
+    margin-bottom: 9px;
+    font-family: var(--primary-font);
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    font-style: normal; 
+}
 
 .nomer {
     font-style: normal;
 }
 .social-network {
-    padding-top: 12px;
+    margin-left: 70px;
 }
 .soc-foot-h3 {
+    margin-bottom: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
 }
@@ -546,23 +574,34 @@ color: rgba(255, 255, 255, 0.6);
     display: flex;
     justify-content: center;
     gap: 10px;
+    margin-top: 20px;
+    
 }
+
 
 .social-list-item {
     height: 44px;
     width: 44px
 }
 .social-link-footer {
+    color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 44px;
+    height: 44px;
     display: flex;
+    border-radius: 50%;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-link-footer :hover
+.social-list-footer :focus {
+    background-color: var(--accent-color);
 }
 .soc-icon-footer {
-    fill: #FFFFFF;
+    fill: currentColor;
+    width: 20px;
+    height: 20px;
 }
 
 /*---------------------------------/FOOTER--*/
