--- a/css/styles2.css
+++ b/css/styles2.css
@@ -15,6 +15,7 @@ a {
     padding-right: 15px;
 }
 :root {
+    
     --knob-color: #2196F3;
     --text-color: #212121;;
     --whitey-color: #FFFFFF;
@@ -46,7 +47,7 @@ li {
 .page-header {
     border-bottom: #ECECEC 1px solid;
      padding-top: 24px;
-    padding-bottom: 25px;
+    padding-bottom: 24px;
 }
 
 .page-header-container {
@@ -61,6 +62,23 @@ li {
 }
 .contact {
     display: flex;
+    align-items: center;
+}
+
+.contact-items :not(:last-child) {
+    margin-right: 50px;
+}
+
+.contact-items {
+    display: flex;
+    flex-direction: row-reverse;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
     margin-right: 50px;
 }
 
@@ -92,7 +110,7 @@ li {
     line-height: 1.2; 
     letter-spacing: 0.03em;
     
-    color: #010101;
+    color: black;
 }
 
 .menu-item:not(:last-child) {
@@ -116,13 +134,15 @@ color:var(--text-color);
     color: var(--knob-color);
 }
 .contact-phoun-number {
-    font-family: 'Roboto', sans-serif;
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14px;
-letter-spacing: 0.02em;
-margin-left: auto;
-color:var(--mail-color);
+    display: flex;
+    flex-direction: row-reverse;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
 
 }
  .menu-link-list {
@@ -131,17 +151,50 @@ color:var(--mail-color);
     font-size: 14px;
     line-height: 1.14px;
     letter-spacing: 0.02em;
-    color: #0c0e10;
+    color:#757575;
 }
 
 .contact-maill { 
-    font-family: 'Roboto', sans-serif ;
+    display: flex;
+    flex-direction: row-reverse;
+    font-family: var(--primary-font);
+    font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
-    
-    color: var(--knob-color);
+    color: #757575;
+}
+.contact-phoun-number {
+    display: flex;
+    flex-direction: row-reverse;
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+
+}
+
+.contact-maill-cont {
+    justify-content: center;
+    text-align: center;
+}
+
+.contact-maill
+.contact-maill-svg {
+    margin-right: 10px;
+    fill: currentColor;
+}
+.contact-m {
+    margin-right: 30px;
+}
+
+.contact-maill:hover,
+.contact-phoun-number:hover {
+    color: #2196F3;
 }
 /*--/======================HEADER--*/
 
