--- a/css/styles2.css
+++ b/css/styles2.css
@@ -427,9 +427,8 @@ color: rgba(255, 255, 255, 0.6);
     width: 20px;
     height: 20px;
 }
-
-.social-list-item :hover 
-.social-list-item :focus  {
-    fill: var(--knob-color);
+.social-link-footer:hover,
+.social-link-footer:focus {
+    background-color: #2196F3; 
 }
 /*=================FOOTER====================*/
