--- a/css/styles.css
+++ b/css/styles.css
@@ -182,13 +182,12 @@ color:var(--text-color);
     text-align: center;
 }
 
-.contact-maill,
-.contact-maill-svg {
+.contact-maill, .contact-maill-svg {
     margin-right: 10px;
 }
 
-.contact-maill:hover,
-.contact-phoun-number:hover {
+.contact-maill:hover, 
+.contact-maill-cont:hover {
     color: #2196F3;
 }
 /*======================================/HEADER*/
