--- a/css/styles2.css
+++ b/css/styles2.css
@@ -193,7 +193,7 @@ color:var(--text-color);
 }
 
 .contact-maill:hover,
-.contact-maill-cont:hover {
+.contact-phoun-number:hover {
     color: #2196F3;
 }
 /*--/======================HEADER--*/
