--- a/css/styles2.css
+++ b/css/styles2.css
@@ -15,7 +15,8 @@ a {
     padding-right: 15px;
 }
 :root {
-    
+    --font-family-main: 'Roboto', sans-serif;
+    --font-family-logo: 'Raleway', sans-serif;
     --knob-color: #2196F3;
     --text-color: #212121;;
     --whitey-color: #FFFFFF;
