--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ img {
     .menu-link:focus {
         color: var(--accent-color) 
     }
-    .log {
+    .logo {
         margin-right: 71px;
     }
     
@@ -114,7 +114,7 @@ img {
         color:var(--knob-color)
     }
     
-    .logotip {
+    .logotipp {
         font-family: 'Raleway';
         font-weight: 700;
         font-size: 26px;
@@ -206,6 +206,10 @@ margin-right: 30px;
 .contact-maill:hover,
 .contact-phoun-number:hover {
   color: #2196F3;
+}
+
+.contact-m {
+    margin-right: 30px;
 }
 /*======================================/HEADER*/
 /*--------------------------------------HERO--*/
