--- a/css/styles2.css
+++ b/css/styles2.css
@@ -194,8 +194,7 @@ color:var(--text-color);
 }
 
 .contact-maill:hover,
-.contact-maill:focus
-.contact-phoun-number:hover {
+.contact-maill:focus {
     color: #2196F3;
 }
 /*--/======================HEADER--*/
@@ -252,6 +251,7 @@ color:var(--text-color);
     color: var(--whitey-color);
     box-shadow: 0px 3px 1px rgba(77, 138, 228, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    border: outset;
 }
 .proekt {
     font-family: 'Roboto',sans-serif;
