--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,9 @@ color: rgba(255, 255, 255, 0.6);
 }
 
 .social-link-footer:hover,
-.social-link-footer:focus {
+.social-link-footer:focus,
+.soc-icon-footer:hover,
+.soc-icon-footer:focus {
     background-color: #2196F3; 
 }
 
